# cftcli

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Jenkinsfile  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
cftcli/: __init__.py  __version__.py  assume_role.py  attach.py  buildspec.yaml  cli.py  codebuild.py  common.py  deploy.py  destroy.py  detail.py  list.py  list_pipelines.py  lock.py  policy.py  secretsmanager_env.py  unlock.py  utils.py
docs/: README.md  api.md  commands.md  configuration.md  examples.md  index.md  installation.md  quickstart.md
examples/: noop-param.yaml  noop.yaml
scripts/: build.sh  push-github.sh
tests/: __init__.py  test_codebuild.py  test_common.py  test_deploy.py  test_list_pipelines.py  test_secretsmanager_env.py  test_utils.py  test_version.py
